Add codeforces partial points logic (#30)
* Add codeforces partial points logic

* Some fixes

---------
